fix: fix movieInfo align

--- a/src/components/FilterTabs/FilterTabs.scss
+++ b/src/components/FilterTabs/FilterTabs.scss
@@ -3,6 +3,11 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+
+  @media (max-width: 767px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .select {
